--- a/PROJETOS/Android/style.css
+++ b/PROJETOS/Android/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
     font-family: Android;
-    src: url(".../fontes/idroid.otf") format('opentype');
+    src: url("fontes/idroid.otf") format('opentype');
     font-weight: normal;
 }
 @import url('https://fonts.googleapis.com/css2?family=Sassy+Frass&display=swap');
