--- a/PROJETOS/Cordel/style.css
+++ b/PROJETOS/Cordel/style.css
@@ -52,7 +52,8 @@ section.imagem{
     background-attachment: fixed;
 }
 section.imagem > p{
-    width: 100vh;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.445);
     text-shadow: 1px 1px 0px black;
 }
